--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Tests
+name: Dev Workflow - Build and Quality Analysis
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,6 +23,9 @@ jobs:
 
       - name: Build
         run: npm run build
+  test:
+    runs-on: ubuntu-latest
 
+    steps:
       - name: Test
         run: npm test
