--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  pre-build:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,11 +21,17 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+  build:
+    runs-on: ubuntu-latest
+    needs: pre-build
+
+    steps:
       - name: Build
         run: npm run build
+
   test:
     runs-on: ubuntu-latest
-    needs: build
+    needs: pre-build
 
     steps:
       - name: Test
