--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  pre-build:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,18 +21,23 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-  build:
-    runs-on: ubuntu-latest
-    needs: pre-build
-
-    steps:
       - name: Build
         run: npm run build
 
   test:
     runs-on: ubuntu-latest
-    needs: pre-build
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.18.2
+
+      - name: Install Dependencies
+        run: npm install
+
       - name: Test
         run: npm test
