--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,21 +24,10 @@ jobs:
       - name: Build
         run: npm run build
 
-  test:
+  deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.18.2
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Test
-        run: npm test
+      - name: Deploy
+        run: echo 'Deploy to production server'
