:bricks: ci: adjust dev workflow for not run on tag push

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,6 +1,14 @@
 name: Dev Workflow - Build and Quality Analysis
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+    tags-ignore:
+      - "*"
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
