--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build
         run: npm run build
 
-  test:
+  quality-analysis:
     runs-on: ubuntu-latest
     needs: build
 
@@ -44,6 +44,9 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
+
+      - name: Lint
+        run: npm run lint  
 
       - name: Test
         run: npm test
